--- a/vignettes/introduction.Rmd
+++ b/vignettes/introduction.Rmd
@@ -1,5 +1,6 @@
 ---
-title: "introduction"
+title: "Introduction to the vnc R package"
+uthor: "David Brown"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{introduction}
