--- a/vignettes/vnc_bib.bib
+++ b/vignettes/vnc_bib.bib
@@ -7,17 +7,18 @@
   pages={59--81},
   year={2008},
   publisher={Edinburgh University Press 22 George Square, Edinburgh EH8 9LF UK},
-  url={https://www.euppublishing.com/doi/abs/10.3366/E1749503208000075},
+  doi = {10.3366/E1749503208000075}
 }
 
-@article{gries2012variability,
+@incollection{gries2012variability,
   title={Variability-based neighbor clustering: A bottom-up approach to periodization in historical linguistics},
   author={Gries, Stefan Th and Hilpert, Martin},
-  journal={The Oxford Handbook of the History of English},
+  booktitle={The Oxford Handbook of the History of English},
+  editor = {Nevalainen, Terttu and Traugott, Elizabeth Closs},
   pages={134--144},
   year={2012},
   publisher={Oxford University Press},
-  url={https://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780199922765.001.0001/oxfordhb-9780199922765-e-14#oxfordhb-9780199922765-div1-50},
+  doi = {10.1093/oxfordhb/9780199922765.013.0014}
 }
 
 @article{gries2009finding,
@@ -29,5 +30,5 @@
   pages={217--242},
   year={2009},
   publisher={Taylor \& Francis},
-  url={https://www.tandfonline.com/doi/abs/10.1080/09296170902975692},
+  doi={10.1080/09296170902975692},
 }
